--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-popper": "^1.0.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.1.0"
+    "reactstrap": "^6.1.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
