--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.4.1",
     "react-popper": "^1.0.0",
     "react-redux": "^5.0.7",
+    "react-redux-form": "^1.16.9",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.1.0",
